# al2o3_cmath

./: CMakeLists.txt  README.md
include/al2o3_cmath/: aabb.h  colour.h  matrix.h  quat.h  scalar.h  scalar.hpp  vector.h  vector.hpp
src/: aabb.c  colour.c  impl.c  matrix.c  scalar.c  vector.c
tests/: runner.cpp  test_aabb.cpp  test_matrix.cpp  test_scalar.cpp  test_vector.cpp
